swagger problem resolved
