# pkg/api/handler/cart.go
@@ -20,6 +20,16 @@ func NewCartHandler(usecase services.CartUseCase) *CartHandler {
 	}
 }
 
+// @Summary		Add To Cart
+// @Description	Add products to carts  for the purchase
+// @Tags			Users
+// @Accept			json
+// @Produce		json
+// @Param			cart	body	models.AddToCart	true	"Add To Cart"
+// @Security		Bearer
+// @Success		200	{object}	response.Response{}
+// @Failure		500	{object}	response.Response{}
+// @Router			/users/home/add-to-cart [post]
 func (i *CartHandler) AddToCart(c *gin.Context) {
 
 	var model models.AddToCart
